# detect-pretrain-code

./: detect_pretrain.ipynb  pyproject.toml
src/: requirements.txt  run.py
