[project]
name = "detect-pretrain-code"
version = "0.1.0"
description = "Private fork of pretraining data detection"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.1,<4.0.0",
    "transformers>=4.51.3,<5.0.0",
    "numpy>=2.2.5,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "matplotlib>=3.10.1,<4.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "openai>=1.76.1,<2.0.0",
    "zlib-state>=0.1.9,<0.2.0",
    "ipdb>=0.13.13,<0.14.0",
    "accelerate>=0.27.2,<0.28.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.13"
torch = {version = ">=2.7.0,<3.0.0", extras = ["cpu"]}
